--- a/commander.html
+++ b/commander.html
@@ -105,9 +105,9 @@
   ::-webkit-scrollbar-thumb{background:var(--border);}
   .empty{color:var(--dim);font-size:12px;font-family:'Share Tech Mono',monospace;text-align:center;padding:16px;}
   /* LEGEND */
-  #legend{position:absolute;bottom:24px;left:12px;z-index:500;background:rgba(10,14,26,.88);border:1px solid var(--border);padding:10px 14px;font-family:'Share Tech Mono',monospace;font-size:11px;}
-  .leg-item{display:flex;align-items:center;gap:8px;margin-bottom:4px;}
-  .leg-dot{width:12px;height:12px;border-radius:50%;border:2px solid rgba(255,255,255,.3);}
+  #legend{position:absolute;bottom:24px;left:12px;z-index:500;background:rgba(5,8,16,.28);border:none;padding:6px 10px;font-family:'Share Tech Mono',monospace;font-size:9px;backdrop-filter:none;}
+  .leg-item{display:flex;align-items:center;gap:5px;margin-bottom:2px;}
+  .leg-dot{width:8px;height:8px;border-radius:50%;border:1px solid rgba(255,255,255,.2);flex-shrink:0;}
   /* MARKER */
   /* .p-marker base — overridden by new CSS block below */
   @keyframes pulse{0%,100%{box-shadow:0 0 8px rgba(0,255,136,.5)}50%{box-shadow:0 0 20px rgba(0,255,136,1),0 0 40px rgba(0,255,136,.3)}}
@@ -609,7 +609,7 @@ function buildLegend(){
   const leg = document.getElementById('legend');
   let html = '';
   CFG.teams.forEach(t=>{
-    html += `<div class="leg-item"><div class="leg-dot" style="background:${t.color};box-shadow:0 0 6px ${t.color}"></div><span style="color:${t.color}">${t.name}</span></div>`;
+    html += `<div class="leg-item"><div class="leg-dot" style="background:${t.color};box-shadow:0 0 4px ${t.color}80"></div><span style="color:${t.color};font-size:9px;letter-spacing:1px;opacity:.85;">${t.name}</span></div>`;
   });
   leg.innerHTML = html;
 }
