--- a/commander.html
+++ b/commander.html
@@ -923,7 +923,7 @@ init();
   <!-- PAGONG FOOTER -->
   <div id="pagong-footer" style="
     position:fixed;bottom:0;left:0;right:341px;
-    background:#050810;border-top:1px solid #1e3a5f;
+    background:rgba(5,8,16,.35);border-top:1px solid rgba(30,58,95,.4);
     padding:8px 14px;display:flex;align-items:center;
     justify-content:space-between;z-index:500;
   ">
