--- a/personnel.html
+++ b/personnel.html
@@ -79,6 +79,29 @@
   ::-webkit-scrollbar{width:3px;}
   ::-webkit-scrollbar-thumb{background:var(--border);}
   .empty{color:var(--dim);font-size:12px;font-family:'Share Tech Mono',monospace;text-align:center;padding:16px;}
+  /* JITSI */
+  #jitsi-fab{position:fixed;bottom:16px;right:16px;z-index:900;background:#00e5ff;border:none;border-radius:50%;width:52px;height:52px;cursor:pointer;box-shadow:0 0 12px rgba(0,229,255,.5);display:flex;align-items:center;justify-content:center;font-size:22px;color:#000;}
+  #jitsi-fab:hover{background:#00fff5;box-shadow:0 0 20px rgba(0,229,255,.9);}
+  #jitsi-panel{display:none;position:fixed;bottom:80px;right:12px;z-index:901;width:calc(100vw - 24px);max-width:340px;background:rgba(5,8,16,.97);border:1px solid rgba(0,229,255,.3);padding:8px;}
+  #jitsi-panel.open{display:block;}
+  #jitsi-panel-hdr{display:flex;align-items:center;justify-content:space-between;margin-bottom:6px;}
+  #jitsi-panel-hdr span{font-family:'Share Tech Mono',monospace;font-size:10px;color:#00e5ff;letter-spacing:1px;}
+  .jp-dot{width:7px;height:7px;border-radius:50%;background:#444;display:inline-block;margin-right:4px;}
+  .jp-dot.live{background:#ff4444;animation:jpulse 1s infinite;}
+  @keyframes jpulse{0%,100%{opacity:1}50%{opacity:.4}}
+  #jp-close{color:#4a6080;font-size:16px;cursor:pointer;font-family:'Share Tech Mono',monospace;line-height:1;}
+  #jp-close:hover{color:#ff4444;}
+  .jp-row{display:flex;gap:4px;margin-bottom:5px;}
+  #jp-room{flex:1;background:rgba(255,255,255,.05);border:1px solid rgba(0,229,255,.25);color:#fff;font-family:'Share Tech Mono',monospace;font-size:10px;padding:4px 7px;outline:none;}
+  #jp-room:focus{border-color:#00e5ff;}
+  .jp-btn{background:rgba(0,229,255,.1);border:1px solid rgba(0,229,255,.3);color:#00e5ff;font-family:'Share Tech Mono',monospace;font-size:9px;padding:4px 9px;cursor:pointer;letter-spacing:1px;transition:all .2s;white-space:nowrap;}
+  .jp-btn:hover{background:#00e5ff;color:#000;}
+  .jp-btn.red{border-color:#ff4444;color:#ff4444;}
+  .jp-btn.red:hover{background:#ff4444;color:#fff;}
+  #jp-wrap{width:100%;background:#000;border:1px solid rgba(0,229,255,.15);min-height:130px;display:flex;align-items:center;justify-content:center;}
+  #jp-wrap iframe{width:100%;height:180px;border:none;display:block;}
+  #jp-idle{color:#4a6080;font-family:'Share Tech Mono',monospace;font-size:10px;text-align:center;padding:16px 8px;letter-spacing:1px;line-height:1.6;}
+
 </style>
 </head>
 <body>
@@ -499,6 +522,45 @@ init();
       © 2025 ALL RIGHTS RESERVED<br/>PARADE TMS · EOC SYSTEM
     </div>
   </div>
+
+
+<!-- JITSI FLOAT BUTTON + PANEL -->
+<button id="jitsi-fab" onclick="toggleJP()" title="Video Conference">📹</button>
+<div id="jitsi-panel">
+  <div id="jitsi-panel-hdr">
+    <span><span class="jp-dot" id="jp-dot"></span>VIDEO CONFERENCE</span>
+    <span id="jp-close" onclick="toggleJP()">✕</span>
+  </div>
+  <div class="jp-row">
+    <input id="jp-room" type="text" placeholder="Room name..." value="PARADE26-EOC"/>
+    <button class="jp-btn" onclick="joinJP()">JOIN</button>
+    <button class="jp-btn red" onclick="leaveJP()">END</button>
+  </div>
+  <div id="jp-wrap">
+    <div id="jp-idle">📹 Enter room name<br/>and press JOIN<br/>to start free video call</div>
+  </div>
+</div>
+<script>
+function toggleJP(){
+  document.getElementById('jitsi-panel').classList.toggle('open');
+}
+function joinJP(){
+  var room=(document.getElementById('jp-room').value||'PARADE26-EOC').trim().replace(/\s+/g,'-');
+  var w=document.getElementById('jp-wrap');
+  w.innerHTML='';
+  var ifr=document.createElement('iframe');
+  ifr.src='https://meet.jit.si/'+encodeURIComponent(room);
+  ifr.allow='camera; microphone; fullscreen; display-capture; autoplay';
+  ifr.style.cssText='width:100%;height:220px;border:none;display:block;';
+  w.appendChild(ifr);
+  document.getElementById('jp-dot').classList.add('live');
+  document.getElementById('jitsi-panel').classList.add('open');
+}
+function leaveJP(){
+  document.getElementById('jp-wrap').innerHTML='<div id="jp-idle">📹 Enter room name<br/>and press JOIN<br/>to start free video call</div>';
+  document.getElementById('jp-dot').classList.remove('live');
+}
+</script>
 
 </body>
 </html>
